added tests and javadocs to the token rules